--- a/Media Object.html
+++ b/Media Object.html
@@ -10,7 +10,7 @@
 
 <div class="container my-4">
   <div class="media">
-    <img class="mr-3" src="your-image-url.jpg" alt="Sample Image" style="width:100px;">
+    <img class="mr-3" src="images/blog.jpg" alt="Sample Image" style="width:100px;">
     <div class="media-body">
       <h5 class="mt-0">Blog Post Title</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet neque elit.</p>
