--- a/card_components.html
+++ b/card_components.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="image1.jpg" alt="Card image cap">
+        <img class="card-img-top" src="images/card1.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Card Title 1</h5>
           <p class="card-text">Short description for card 1.</p>
@@ -22,7 +22,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="image2.jpg" alt="Card image cap">
+        <img class="card-img-top" src="images/card2.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Card Title 2</h5>
           <p class="card-text">Short description for card 2.</p>
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-4">
       <div class="card">
-        <img class="card-img-top" src="image3.jpg" alt="Card image cap">
+        <img class="card-img-top" src="images/card3.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Card Title 3</h5>
           <p class="card-text">Short description for card 3.</p>
