--- a/Carousel.html
+++ b/Carousel.html
@@ -16,21 +16,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="image1.jpg" class="d-block w-100" alt="...">
+      <img src="images/carousel1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First Slide Label</h5>
         <p>First slide description.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="image2.jpg" class="d-block w-100" alt="...">
+      <img src="images/carousel2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second Slide Label</h5>
         <p>Second slide description.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="image3.jpg" class="d-block w-100" alt="...">
+      <img src="images/carousel3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third Slide Label</h5>
         <p>Third slide description.</p>
